11 commit: implement almost of functionalities!
TODO:
1. beatify the UI
2. redesign appointment part:
How can patient search doctors?
3. data validation as TA asked

--- a/src/ui/CommonComponent.form
+++ b/src/ui/CommonComponent.form
@@ -58,8 +58,8 @@
                   <EmptySpace min="-2" pref="279" max="-2" attributes="0"/>
                   <Component id="btnRegister" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
-                  <Component id="btnLogin" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="297" max="32767" attributes="0"/>
+                  <Component id="btnNew" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="302" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -97,7 +97,7 @@
                   <EmptySpace min="-2" pref="282" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnRegister" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="btnLogin" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="btnNew" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="283" max="32767" attributes="0"/>
               </Group>
@@ -161,15 +161,15 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegisterActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="btnLogin">
+    <Component class="javax.swing.JButton" name="btnNew">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/assets/add.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Lgoin"/>
+        <Property name="text" type="java.lang.String" value="New"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLoginActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNewActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnView">
